Add styles for `mark` HTML elements

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,6 +136,9 @@ pre {
     overflow: auto;
     max-width: 100%;
 }
+mark {
+    background: rgba(86,164,159,0.4)
+}
 /* end css reset */
 
 @media all {
@@ -224,13 +227,15 @@ pre {
         color: #555555;
     }
     /* subtitles */
-    h3, h3 * {
-        font-family: 'Roboto Slab', serif;
+    h3 {
         font-size: 1.8em;
-        color: #666666;
-        font-weight: normal;
         line-height: 1.25em;
         margin: 0.75em 0 0.5em 0;
+	}
+    h3, h3 * {
+        font-family: 'Roboto Slab', serif;
+        color: #666666;
+        font-weight: normal;
         text-align: left;
     }
     h4 {
