Upate version and add theme tags

--- a/style.css
+++ b/style.css
@@ -4,9 +4,10 @@ Theme URI: https://mindad.ch/
 Author: Michael J. Jarrett
 Author URI: https://m.jarrett.ch/
 Description: An ultra-minimalist, content-focused theme.
-Version: 3
+Version: 1.0.0
 License: The Unlicense
 License URI: http://unlicense.org/
+Tags: blog, one-column, threaded-comments
 
 This theme is uncopyrighted/unlicensed.
 Do whatever you'd like with it.
