Add explicit text domain

--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ Version: 1.0.2
 License: The Unlicense
 License URI: http://unlicense.org/
 Tags: blog, one-column, threaded-comments
+Text Domain: mindad
 
 This theme is uncopyrighted/unlicensed.
 Do whatever you'd like with it.
