--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -216,7 +216,7 @@ hr {
     height: 1px;
     width: 100%;
     display: block;
-    background: #f2f2f2;
+    background: #efefef;
     margin: 2em 0;
 }
 /* end css reset */
@@ -226,9 +226,6 @@ hr {
         display: none;
     }
     body {
-        font: normal 100% Open Sans,Helvetica,sans-serif;
-        background-color: #ffffff;
-        color: #000;
         padding: .6em;
         -webkit-font-smoothing: antialiased;
     }
@@ -306,7 +303,7 @@ hr {
         z-index: 10;
         left: 0;
         top: 0;
-        background: #f2f2f2;
+        background: #efefef;
         transition: height 0.5s;
         cursor: initial;
     }
@@ -668,6 +665,15 @@ hr {
     .navigation a:active,
     .navigation a:focus {
         color: #999999;
+    }
+    /* post pagination */
+    .post-pagination {
+        display: block;
+        width: 100%;
+        text-align: right;
+        padding-top: 15px;
+        margin-top: 15px;
+        border-top: 1px solid #efefef;
     }
     /* "see all posts" at bottom of home page */
     .all_posts {
