Change theme URL to new demo site

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: mindad
-Theme URI: https://mindad.ch/
+Theme URI: https://demo.mindad.ch/
 Author: Michael J. Jarrett
 Author URI: https://m.jarrett.ch/
 Description: An ultra-minimalist, content-focused theme.
