--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -160,6 +160,12 @@ em, i {
     -moz-opacity: 0.9;
     opacity: 0.9;
     font-size: 0.99em;
+	/*
+	 * for some reason em elements appear in front of the menu on some browsers,
+	 * the below fixes that issue.
+	 */
+	position: relative;
+	z-index: -1;
 }
 blockquote > p:only-of-type {
     display: inline;
@@ -293,13 +299,13 @@ hr {
     .header-menu > label:hover {
         border-color: #777777;
     }
-    .header-menu > label:hover > .menu-line:nth-child(odd) {
+    .header-menu > label:hover > .menu-line:nth-of-type(odd){
         margin-left: 0;
-        transition: margin-left 0.3s;
+        transition: all 0.3s;
     }
-    .header-menu > label:hover > .menu-line:nth-child(even) {
+    .header-menu > label:hover > .menu-line:nth-of-type(even) {
         margin-left: 3px;
-        transition: margin-left 0.3s;
+        transition: all 0.3s;
     }
     .header-menu .menu-trigger {
         display: none;
@@ -310,52 +316,76 @@ hr {
         width: 25px;
         height: 3px;
         margin: 5px 0;
-        transition: margin-left 0.3s;
+        transition: all 0.3s;
+		opacity: 1;
     }
-    .header-menu .menu-line:nth-child(odd)  {
+    .header-menu .menu-line:nth-of-type(odd)  {
         margin-left: 3px;
     }
+	.header-menu > label > .menu-trigger:checked ~ .menu-line,
     .header-menu > label:hover > .menu-line {
         background: #777777;
     }
     .header-menu > label > div {
-        overflow: hidden;
-        height: 0;
-        width: 0;
-        position: fixed;
-        z-index: 10;
-        left: 0;
-        top: 0;
-        background: #efefef;
-        transition: height 0.5s;
-        cursor: initial;
+	    height: 100%;
+	    width: 400px;
+		max-width: 100%;
+	    position: fixed;
+	    z-index: 10;
+	    top: 0;
+	    background: #efefef;
+    	transition: margin-right 0.3s;
+    	cursor: initial;
+	    right: 0;
+    	right: calc(50% - 45em / 2);
+	    box-shadow: 0 0 10px 0 #ccc;
+		margin-right: -101vw;
     }
+	body.admin-bar .header-menu > label > div {
+		top: 32px;
+	}
     .header-menu > label > div:before {
         content: "×";
         font-size: 45px;
         display: block;
         position: absolute;
-        top: 15px;
-        right: 30px;
+        top: 20px;
+        right: 20px;
         height: auto;
         width: auto;
         color: #777777;
         cursor: pointer;
         transition: all 0.2s;
+		display: none;
     }
     .header-menu > label > div:before:hover {
         color: #999999;
         transform: rotate(90deg);
         transition: all 0.2s;
     }
-    .header-menu .menu-trigger:checked + div {
-        width: 100%;
-        height: 100%;
-        transition: height 0.5s;
-    }
+	.header-menu .menu-trigger:checked ~ .menu-line {
+		position: fixed;
+		margin-left: 0;
+		top: 35px;
+	    z-index: 11;
+	}
+	.header-menu .menu-trigger:checked ~ .menu-line:nth-of-type(1) {
+        transform: rotate(45deg);
+	}
+	.header-menu .menu-trigger:checked ~ .menu-line:nth-of-type(2) {
+        opacity: 0;
+        transform: rotate(45deg);
+	}
+	.header-menu .menu-trigger:checked ~ .menu-line:nth-of-type(3) {
+        transform: rotate(-45deg);
+	}
+    .header-menu .menu-trigger:checked ~ div {
+		margin-right: 0;
+    	transition: margin-right 0.3s;
+	}
     .header-menu > label > div > .menu {
         font-size: 1.5em;
-        padding-top: 50px;
+        padding-top: 70px;
         max-width: 350px;
         margin: 0 auto;
     }
@@ -366,8 +396,8 @@ hr {
         font-family: "Roboto Condensed", sans-serif;
         text-transform: uppercase;
         letter-spacing: 0.1em;
-        margin: 5px 0;
-        padding: 5px 0;
+        margin: 7px 0;
+        padding: 7px 0;
         display: block;
         transition: all 0.2s;
     }
@@ -975,7 +1005,28 @@ hr {
         padding: .1;
     }
 }
+/* only for XXL screens */
+@media screen and (min-width: 1440px) {
+	.header-menu > label > div {
+		transform: translateX(100%);
+		width: calc(50% - 45em / 2);
+	    max-width: 600px;
+	}
+    .header-menu .menu-trigger:checked ~ div:before {
+		content: '';
+	    display: block;
+    	position: absolute;
+	    height: 50px;
+    	width: 60px;
+	    background: white;
+    	left: -73px;
+	    top: 15px;
+    	border-top-left-radius: 50%;
+	    border-bottom-left-radius: 50%;
+    	box-shadow: 0 0 10px 6px white;
+	}
 
+}
 /* only for desktop */
 @media screen and (min-width: 768px) {
     input:not([type=submit]):not([type=checkbox]):not([type=radio]) {
@@ -1029,6 +1080,19 @@ hr {
     }
 }
 
+
+/* for narrow browsers */
+@media (max-width: 1440px) {
+
+	.header-menu {
+		position: fixed;
+		top: 25px;
+	}
+	.header-menu > label > div {
+		right: 0;
+	}
+}
+
 /* for narrower browsers */
 @media screen and (max-width: 767px) {
     /* makes blog title not fade on touch screen */
@@ -1080,6 +1144,13 @@ hr {
         text-align: left;
         font-size: 1.5em;
     }
+	.header-menu {
+		position: absolute;
+		top: 15px;
+	}
+	.header-menu > label > div {
+		right: 0;
+	}
 }
 
 /* for iPhone-sized devices */
@@ -1158,7 +1229,7 @@ hr {
         top: initial;
         right: 15px;
         bottom: 35px;
-        z-index: 10;
+        z-index: 99;
     }
     .header-menu > label {
         border-radius: 50%;
@@ -1179,6 +1250,10 @@ hr {
     .header-menu >label:hover .menu-line {
         background: #ffffff;
     }
+	/* avoid small gap on left side */
+	.header-menu > label > div {
+		width: 100%;
+	}
 }
 
 @media print {
