--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -337,30 +337,17 @@ hr {
 	    z-index: 10;
 	    top: 0;
 	    background: #efefef;
-    	transition: margin-right 0.3s;
+    	transition: all 0.3s;
     	cursor: initial;
 	    right: 0;
     	right: calc(50% - 45em / 2);
-	    box-shadow: 0 0 10px 0 #ccc;
+	    box-shadow: 0 0 10px 0 #cccccc;
 		margin-right: -101vw;
+        opacity: 0;
     }
 	body.admin-bar .header-menu > label > div {
 		top: 32px;
 	}
-    .header-menu > label > div:before {
-        content: "×";
-        font-size: 45px;
-        display: block;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        height: auto;
-        width: auto;
-        color: #777777;
-        cursor: pointer;
-        transition: all 0.2s;
-		display: none;
-    }
     .header-menu > label > div:before:hover {
         color: #999999;
         transform: rotate(90deg);
@@ -384,7 +371,8 @@ hr {
 	}
     .header-menu .menu-trigger:checked ~ div {
 		margin-right: 0;
-    	transition: margin-right 0.3s;
+    	transition: all 0.3s;
+        opacity: 1;
 	}
     .header-menu > label > div > .menu {
         font-size: 1.5em;
@@ -1101,7 +1089,7 @@ hr {
 
 
 /* for narrow browsers */
-@media (max-width: 1440px) {
+@media (max-width: 1339px) {
 
 	.header-menu {
 		position: fixed;
